# ShadowApp_Windows

./: CMakeLists.txt  README.md  functions.cpp  functions.h  helpdialog.cpp  helpdialog.h  helpdialog.ui  img_sources.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  thien_lin_shadows.cpp  thien_lin_shadows.h
